# rmsai-relay

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  conftest.py  notes  pyproject.toml
app/: README.md  app.js  index.html
cli/: README.md  consume.py  gateway.py  gen_synthetic.py  graph.py  inbox_publish.py  ingest.py  kb.py  kb_dump.py  kb_eval.py  kb_vector.py  livekit_token.py  memory.py  outbound.py  speech_check.py  text_chat.py  voice.py  voice_worker.py
common/: README.md  __init__.py  audit.py  bed_assignment.py  config.py  criticality.py  deid.py  ecg_model_stub.py  event_types.py  interfaces.py  notify.py  patient_history.py  protocol_loader.py  providers.py  redacting_logger.py  schemas.py  tracing.py
common/protocols/: care_protocols.yaml
data/: README.md
data/fixtures/: PT1155_2026-06.h5  expected_facts.json
docs/: README.md  afib_rvr.md  mews_escalation.md  vt_vf.md
emr/: README.md  fhir.py
inference/: README.md  ecg_model.py  pipeline.py  plotting.py  report.py  serialize.py  vitals_analysis.py
infra/: README.md  docker-compose.yml  livekit.yaml
ingest/: README.md  hdf5_reader.py  mqtt_reader.py  rates.py
kb/: README.md
kb/eval/: README.md  fixtures.py  harness.py  questions.json
kb/graph/: README.md  driver.py  entities.py  events.py  extract.py  ingest.py  lookup.py  protocols.py  schema.py  spoken.py  templates.py
kb/hybrid/: README.md  answer.py  linker.py  retriever.py
kb/vector/: README.md  answer.py  chunking.py  embeddings.py  rerank.py  retriever.py  store.py
live/: README.md  __init__.py  artifact_tokens.py  gateway.py  inbox.py
memory/: README.md  __init__.py  episodic.py  semantic.py  working.py
orchestrator/: README.md  bus_consumer.py  chat.py  event_flow.py  guardrails.py  orchestrator.py  outbound_flow.py  patient_bootstrap.py  report.py
tests/: README.md  test_audit.py  test_bus_consumer.py  test_chat_indexing.py  test_cohort.py  test_criticality.py  test_deid_providers.py  test_elevenlabs_adapters.py  test_episodic_gate.py  test_eval.py  test_event_flow.py  test_event_types.py  test_failure_modes.py  test_fhir.py  test_fixture_g13.py  test_gateway_ack.py  test_gateway_artifact.py  test_gateway_session.py  test_graph_extract.py  test_graph_ingest.py  test_graph_schema.py  test_graph_templates.py  test_guardrails_tracing.py  test_hdf5_reader.py  test_hybrid.py  test_inbox_handler.py  test_inbox_publish.py  test_inference_wrappers.py  test_infra.py  test_ingest_cli.py  test_kb_dump.py  test_livekit.py  test_livekit_token.py  test_livekit_worker.py  test_lookup_intent.py  test_memory_episodic.py  test_memory_semantic.py  test_memory_working.py  test_mqtt_reader.py  test_notify.py  (+21 more)
voice/: README.md  adapters.py  auth.py  handlers.py  livekit_agent.py  livekit_cloud.py  outbound.py  outbound_alert.py  session.py  wake.py
voice/gateway/: README.md  sip-inbound.example.yaml
